# generic-args

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: test.yml
generic_args/: __init__.py  errors.py  generic_args.py  get_args.py
tests/: test_generics.py  test_type_args.py
