[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "generic-args"
description = "Given an instantiated generic class, retrieve the type arguments of itself or its parents."
version = "0.0.1"
license = "MIT"

authors = []

readme = "README.md"

repository = "https://github.com/python-platonic/generic-args"

keywords = []

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.8"
documented = "^0.1.1"

[tool.poetry.dev-dependencies]
mypy = "^0.800"

wemake-python-styleguide = "^0.15"
flake8-pytest-style = "^1.3"

safety = "^1.10"

pytest = "^6.2"
pytest-cov = "^2.11"
pytest-randomly = "^3.5"

m2r2 = "^0.2"
tomlkit = "^0.7"
flakehell = "^0.9.0"


[tool.flakehell]
base = "https://raw.githubusercontent.com/Recall-Masters/standards/main/pyproject.toml"
